# frankenredis

./: .gitattributes  .gitignore  .rchignore  .skill-loop-progress.md  .ubsignore  AGENTS.md  AGENT_NAME  CHANGELOG.md  COMPREHENSIVE_SPEC_FOR_FRANKENREDIS_V1.md  Cargo.toml  EXHAUSTIVE_LEGACY_ANALYSIS.md  EXISTING_REDIS_STRUCTURE.md  FEATURE_PARITY.md  PARITY-COVERAGE.md  PLAN_TO_PORT_REDIS_TO_RUST.md  PROPOSED_ARCHITECTURE.md  README.md  UPGRADE_LOG.md  claude-upgrade-progress.json  legacy_redis_code  print_diffs.rs  run_oracle_diff.rs
crates/fr-bench/: Cargo.toml
crates/fr-bench/benches/: bitfield_vs_redis.rs  exists_vs_redis.rs  geo_vs_redis.rs  keyed_write_vs_redis.rs  restore_quicklist_vs_redis.rs  set_algebra_vs_redis.rs
crates/fr-bench/src/: main.rs
crates/fr-command/: Cargo.toml  build.rs
crates/fr-command/benches/: cjson_decode.rs  cjson_encode.rs  classify4_dispatch.rs  classify5_dispatch.rs  classify6_dispatch.rs  classify7_dispatch.rs  classify8_dispatch.rs  command_docs_lookup.rs  command_info_lookup.rs  geo_center_cos_hoist.rs  geosearchstore_bybox.rs  lua_eval.rs  lua_rediscall_loop.rs  lua_setkeysargv_coroutine.rs  lua_string_pattern.rs  sort_alpha_compare.rs  sort_move.rs
crates/fr-command/src/: lib.rs  lua_eval.rs  zadd_xx_test.rs
crates/fr-command/tests/: cluster_test.rs  command_docs_bit_range.rs  command_docs_deprecation.rs  command_docs_expire_family.rs  command_docs_full_byte_equivalence.rs  command_docs_group_classification.rs  command_docs_lmpop.rs  command_docs_no_args_suppression.rs  command_docs_pubsub.rs  command_docs_simple_commands.rs  command_docs_subcommands_fanout.rs  float_test.rs  golden.rs  lua_loop_test.rs  metamorphic_resp3_map_shape.rs  scan_test.rs  script_debug_test.rs  test_lua_bugs.rs  unpack_oom.rs
crates/fr-config/: Cargo.toml
crates/fr-config/benches/: config_directives.rs  config_plain_tokens.rs  tls_protocol_mask.rs
crates/fr-config/src/: lib.rs
crates/fr-config/tests/: golden.rs
crates/fr-conformance/: Cargo.toml
crates/fr-conformance/benches/: fixture_case_select.rs  frame_match_exact.rs
crates/fr-conformance/fixtures/: README.md  core_acl.json  core_bitmap.json  core_blocking.json  core_blocking_multi_client.json  core_client.json  core_cluster.json  core_command_edges.json  core_config.json  core_connection.json  core_copy.json  core_debug.json  core_errors.json  core_expiry.json  core_function.json  core_generic.json  core_geo.json  core_hash.json  core_hyperloglog.json  core_list.json  core_migrate.json  core_module_sentinel.json  core_object.json  core_pfdebug.json  core_pubsub.json  core_pubsub_multi_client.json  core_replication.json  core_scan.json  core_scripting.json  core_server.json  core_set.json  core_sort.json  core_stream.json  core_strings.json  core_transaction.json  core_wait.json  core_zset.json  fr_p2c_004_acl_journey.json  fr_p2c_006_replication_handshake.json  fr_p2c_006_replication_journey.json  (+5 more)
crates/fr-conformance/src/: lib.rs  log_contract.rs  phase2c_schema.rs
crates/fr-conformance/tests/: log_contract_goldens.rs  log_contract_live.rs  script_wrapper_contract.rs  smoke.rs
crates/fr-eventloop/: Cargo.toml
crates/fr-eventloop/benches/: active_expire_single_db.rs  read_path_inline.rs
crates/fr-eventloop/src/: lib.rs
crates/fr-persist/: Cargo.toml
crates/fr-persist/benches/: aof_manifest_plain_tokens.rs  crc64_threshold.rs  int_render_itoa2.rs  legacy_hash_ziplist_move.rs  listpack_backlen.rs  listpack_decode_move.rs  listpack_int_parse.rs  lzf_prefix_simd.rs  quicklist_encode.rs  rdb_codec.rs  stream_rdb_id_alloc.rs  value_spans_presize.rs  zset_lp_score_decode.rs
crates/fr-persist/examples/: generate_fuzz_corpus.rs
crates/fr-persist/src/: lib.rs  listpack.rs  rdb_stream.rs  ziplist.rs
crates/fr-persist/tests/: fuzz_corpus_smoke.rs  golden.rs  metamorphic.rs
crates/fr-protocol/: Cargo.toml
crates/fr-protocol/benches/: decimal_len_ilog10.rs  encode_array_reply_fastpath.rs  encode_bulk_small_len.rs  encode_bulk_string_fastpath.rs  encode_integer_fastpath.rs  inline_sanitize_runs.rs  parse_bulk_slice_fastpath.rs  parse_frame_len_line_fastpath.rs  parse_i64_fastpath.rs  parse_multibulk_count_fastpath.rs  push_len_header_fastpath.rs  resp3_big_number_parse.rs  resp3_bool_fixed.rs  resp3_scalar_dispatch.rs
crates/fr-protocol/src/: lib.rs
crates/fr-protocol/tests/: fuzz_corpus_smoke.rs  golden.rs  live_oracle_diff.rs
crates/fr-repl/: Cargo.toml
crates/fr-repl/benches/: handshake_replconf.rs  psync_decision_exact_replid.rs  psync_reply_canonical.rs  wait_zero_offset.rs
crates/fr-repl/src/: lib.rs
crates/fr-repl/tests/: golden.rs
crates/fr-runtime/: Cargo.toml
crates/fr-runtime/benches/: client_list_id_lookup.rs  client_tracking_membership.rs  config_get_static_lookup.rs  hmset_ok_reply_alloc.rs  mset_ok_reply_alloc.rs  pubsub_pending_clients.rs  rename_ok_reply_alloc.rs  replconf_ack_snapshot.rs  replconf_option.rs  replica_frame_borrow.rs  set_absexpire_ok_reply_alloc.rs  set_nx_ok_reply_alloc.rs  set_ok_reply_alloc.rs  set_relexpire_ok_reply_alloc.rs  set_xx_ok_reply_alloc.rs  setex_ok_reply_alloc.rs
crates/fr-runtime/src/: lib.rs
crates/fr-runtime/tests/: admin_commands_test.rs  aof_roundtrip_test.rs  client_pause_test.rs  dump_restore_roundtrip.rs  lua_edge_cases_test.rs  metamorphic_test.rs  multi_exec_linearizability.rs  noreplicas_test.rs  scan_iteration_test.rs  stale_replica_test.rs  watch_cross_client_test.rs
crates/fr-sentinel/: Cargo.toml
crates/fr-sentinel/benches/: hello_message_parse.rs  info_response_apply.rs  select_slave.rs  stale_sentinel_prune.rs
crates/fr-sentinel/src/: commands.rs  consensus.rs  discovery.rs  failover.rs  health.rs  lib.rs
crates/fr-sentinel/tests/: golden.rs
crates/fr-server/: Cargo.toml
crates/fr-server/benches/: inline_args.rs  replication_prefix_take.rs
crates/fr-server/src/: lib.rs  main.rs
crates/fr-server/tests/: client_kill_test.rs  config_rewrite_test.rs  fuzz_corpus_smoke.rs  noreplicas_test.rs  object_idletime_floor_ab.rs  (+1 more)
crates/fr-simd/: Cargo.toml
crates/fr-store/: Cargo.toml
(+4891 files in other folders)
