[workspace]
resolver = "2"
members = [
  "crates/fr-bench",
  "crates/fr-eventloop",
  "crates/fr-protocol",
  "crates/fr-command",
  "crates/fr-simd",
  "crates/fr-store",
  "crates/fr-expire",
  "crates/fr-persist",
  "crates/fr-repl",
  "crates/fr-config",
  "crates/fr-conformance",
  "crates/fr-runtime",
  "crates/fr-sentinel",
  "crates/fr-server",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license-file = "LICENSE"

# (gauntlet) Dedicated profiling profile per the keep-gate rules: perf claims
# must be measured here, never on size-optimized `--release`. Inherits release
# but pins LTO/codegen-units for stable attribution and keeps frame pointers +
# symbols so flamegraph/samply/perf can resolve frames.
[profile.release-perf]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
strip = false

[workspace.dependencies]
arbitrary = { version = "1.4.2", features = ["derive"] }
hdrhistogram = "7.5.4"
hex = "0.4.3"
libc = "0.2.185"
libfuzzer-sys = "0.4.12"
mimalloc = "0.1.49"
memchr = "2.8.0"
mio = { version = "1.2.0", features = ["net", "os-poll"] }
proptest = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tikv-jemallocator = "0.6.1"
