[package]
name = "fr-bench"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description = "FrankenRedis TCP benchmark harness"

[[bin]]
name = "fr-bench"
path = "src/main.rs"

[dependencies]
fr-protocol = { path = "../fr-protocol" }
hdrhistogram = "7.5.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
