[package]
name = "fr-bench"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description = "FrankenRedis TCP benchmark harness"

[[bin]]
name = "fr-bench"
path = "src/main.rs"

[dependencies]
fr-protocol = { path = "../fr-protocol" }
hdrhistogram.workspace = true
serde.workspace = true
serde_json.workspace = true
