[package]
name = "fr-bench"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description = "FrankenRedis TCP benchmark harness"

[[bin]]
name = "fr-bench"
path = "src/main.rs"

[dependencies]
fr-protocol = { path = "../fr-protocol" }
hdrhistogram.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "keyed_write_vs_redis"
harness = false

[[bench]]
name = "set_algebra_vs_redis"
harness = false

[[bench]]
name = "exists_vs_redis"
harness = false

[[bench]]
name = "restore_quicklist_vs_redis"
harness = false
