[package]
name = "fr-command"
version = "0.1.0"
edition = "2024"

[dependencies]
fr-protocol = { version = "0.1.0", path = "../fr-protocol" }
fr-sentinel = { version = "0.1.0", path = "../fr-sentinel" }
fr-store = { version = "0.1.0", path = "../fr-store" }
foldhash = "0.1"
icu_collator = "2.2.0"
icu_locale_core = "2.2.0"
serde_json.workspace = true
sha2.workspace = true

[build-dependencies]
serde_json.workspace = true

[features]
bench-reference = []

[dev-dependencies]
proptest.workspace = true
criterion = "0.5"

[[bench]]
name = "lua_eval"
harness = false

[[bench]]
name = "sort_alpha_compare"
harness = false

[[bench]]
name = "geosearchstore_bybox"
harness = false
required-features = ["bench-reference"]
