[package]
name = "fr-command"
version = "0.1.0"
edition = "2024"

[dependencies]
fr-protocol = { version = "0.1.0", path = "../fr-protocol" }
fr-sentinel = { version = "0.1.0", path = "../fr-sentinel" }
fr-store = { version = "0.1.0", path = "../fr-store" }
foldhash = "0.1"
icu_collator = "2.2.0"
icu_locale_core = "2.2.0"
serde_json.workspace = true
sha2.workspace = true

[build-dependencies]
serde_json.workspace = true

[features]
bench-reference = []

[dev-dependencies]
proptest.workspace = true
criterion = "0.5"

[[bench]]
name = "lua_eval"
harness = false

[[bench]]
name = "sort_alpha_compare"
harness = false

[[bench]]
name = "geosearchstore_bybox"
harness = false
required-features = ["bench-reference"]

[[bench]]
name = "command_info_lookup"
harness = false
required-features = ["bench-reference"]

[[bench]]
name = "command_docs_lookup"
harness = false
required-features = ["bench-reference"]

# (frankenredis-sortmove) Same-binary A/B for SORT result move-not-clone: per-element clone
# (materialize + reply) vs mem::take window + into_iter reply.
[[bench]]
name = "sort_move"
harness = false

# Same-binary A/B for command classification dispatch: compute-packed-once + match-on-u64 vs the
# production linear eq_ascii_command chain, over the (largest) 6-byte command bucket.
[[bench]]
name = "classify6_dispatch"
harness = false

# A/B for the 4-byte command bucket: compute-packed-once + match vs the linear eq_ascii_command chain.
[[bench]]
name = "classify4_dispatch"
harness = false

# A/B for the 5-byte command bucket: compute-packed-once + match vs the linear eq_ascii_command chain.
[[bench]]
name = "classify5_dispatch"
harness = false

# A/B for the 7-byte command bucket: compute-packed-once + match vs the linear eq_ascii_command chain.
[[bench]]
name = "classify7_dispatch"
harness = false

# A/B for the 8-byte command bucket: compute-packed-once + match vs the linear eq_ascii_command chain.
[[bench]]
name = "classify8_dispatch"
harness = false
