[package]
name = "fr-config"
version = "0.1.0"
edition = "2024"
autobenches = false

[features]
bench-reference = []

[dependencies]

[[bench]]
name = "config_plain_tokens"
harness = false
required-features = ["bench-reference"]

[[bench]]
name = "config_directives"
harness = false
required-features = ["bench-reference"]

[[bench]]
name = "tls_protocol_mask"
harness = false
required-features = ["bench-reference"]
