[package]
name = "fr-conformance"
version = "0.1.0"
edition = "2024"
autobenches = false

[features]
bench-reference = []

[dependencies]
fr-config = { version = "0.1.0", path = "../fr-config" }
fr-persist = { version = "0.1.0", path = "../fr-persist" }
fr-protocol = { version = "0.1.0", path = "../fr-protocol" }
fr-repl = { version = "0.1.0", path = "../fr-repl" }
fr-runtime = { version = "0.1.0", path = "../fr-runtime" }
fr-store = { version = "0.1.0", path = "../fr-store" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[[bench]]
name = "frame_match_exact"
harness = false
required-features = ["bench-reference"]

[[bench]]
name = "fixture_case_select"
harness = false
required-features = ["bench-reference"]
