[package]
name = "fr-eventloop"
version = "0.1.0"
edition = "2024"

[dependencies]

[features]
bench-reference = []
bench-live-profile = []

[[bench]]
name = "active_expire_single_db"
harness = false
required-features = ["bench-reference"]

[[bench]]
name = "read_path_inline"
harness = false
required-features = ["bench-live-profile"]
