[package]
name = "fr-persist"
version = "0.1.0"
edition = "2024"

[features]
default = ["upstream-stream-rdb"]
# (frankenredis-wt4eo) Redis-compatible RDB stream encoding (type 21,
# STREAM_LISTPACKS_3) for SAVE, so fr's RDB files are loadable by upstream Redis.
# fr can decode both type 15 (legacy fr-private) and type 21.
upstream-stream-rdb = []

[dependencies]
fr-protocol = { version = "0.1.0", path = "../fr-protocol" }
fr-simd = { version = "0.1.0", path = "../fr-simd" }

[dev-dependencies]
proptest.workspace = true
criterion = "0.5"

# (frankenredis VERIFY phase, cc) Server-free, degradation-immune criterion bench of the RDB
# encode+decode path — exercises the presize/direct-emit encode levers + the decode-string-move
# levers. A/B by toggling a lever and re-running `cargo bench -p fr-persist`.
[[bench]]
name = "rdb_codec"
harness = false
