[package]
name = "fr-persist"
version = "0.1.0"
edition = "2024"

[features]
default = ["upstream-stream-rdb"]
# (frankenredis-wt4eo) Redis-compatible RDB stream encoding (type 21,
# STREAM_LISTPACKS_3) for SAVE, so fr's RDB files are loadable by upstream Redis.
# fr can decode both type 15 (legacy fr-private) and type 21.
upstream-stream-rdb = []

[dependencies]
fr-protocol = { version = "0.1.0", path = "../fr-protocol" }
fr-simd = { version = "0.1.0", path = "../fr-simd" }

[dev-dependencies]
proptest.workspace = true
criterion = "0.5"

# (frankenredis VERIFY phase, cc) Server-free, degradation-immune criterion bench of the RDB
# encode+decode path — exercises the presize/direct-emit encode levers + the decode-string-move
# levers. A/B by toggling a lever and re-running `cargo bench -p fr-persist`.
[[bench]]
name = "rdb_codec"
harness = false

# (cc_fr) Same-binary null-gated A/B for the listpack per-entry backlen decode: original
# reverse-7-bit loop vs the single-byte fast path. main() prints a verdict and exits 0.
[[bench]]
name = "listpack_backlen"
harness = false

# (cc_fr) Same-binary null-gated A/B for parse_listpack_integer (DUMP int-encode gate):
# two-pass canonical-scan+accumulate vs the single-pass fused parse.
[[bench]]
name = "listpack_int_parse"
harness = false

# (cc_fr) Same-binary null-gated A/B for the quicklist2 list RDB encode: two-walk
# (node-count pre-walk + pack) vs memoized single length pass.
[[bench]]
name = "quicklist_encode"
harness = false

# (CobaltHarbor) Crossover A/B for the crc64_redis pclmul-vs-slice-by-16 dispatch threshold:
# fr_simd::crc64 (fold-by-4) vs crc64_redis_slice_table, across small sizes, null-gated.
[[bench]]
name = "crc64_threshold"
harness = false

# (frankenredis-knzdi) Same-binary A/B for listpack RDB decode string materialization:
# ListpackEntry::to_bytes (clone) vs into_bytes (move) after decode_listpack.
[[bench]]
name = "listpack_decode_move"
harness = false
