[package]
name = "fr-persist"
version = "0.1.0"
edition = "2024"

[features]
default = ["upstream-stream-rdb"]
bench-reference = []
# (frankenredis-wt4eo) Redis-compatible RDB stream encoding (type 21,
# STREAM_LISTPACKS_3) for SAVE, so fr's RDB files are loadable by upstream Redis.
# fr can decode both type 15 (legacy fr-private) and type 21.
upstream-stream-rdb = []

[dependencies]
fr-protocol = { version = "0.1.0", path = "../fr-protocol" }
fr-simd = { version = "0.1.0", path = "../fr-simd" }

[dev-dependencies]
proptest.workspace = true
criterion = "0.5"

# (frankenredis VERIFY phase, cc) Server-free, degradation-immune criterion bench of the RDB
# encode+decode path — exercises the presize/direct-emit encode levers + the decode-string-move
# levers. A/B by toggling a lever and re-running `cargo bench -p fr-persist`.
[[bench]]
name = "rdb_codec"
harness = false

# (cc_fr) Same-binary null-gated A/B for the listpack per-entry backlen decode: original
# reverse-7-bit loop vs the single-byte fast path. main() prints a verdict and exits 0.
[[bench]]
name = "listpack_backlen"
harness = false

# (cc_fr) Same-binary null-gated A/B for parse_listpack_integer (DUMP int-encode gate):
# two-pass canonical-scan+accumulate vs the single-pass fused parse.
[[bench]]
name = "listpack_int_parse"
harness = false

# (cc_fr) Same-binary null-gated A/B for the quicklist2 list RDB encode: two-walk
# (node-count pre-walk + pack) vs memoized single length pass.
[[bench]]
name = "quicklist_encode"
harness = false

# (CobaltHarbor) Crossover A/B for the crc64_redis pclmul-vs-slice-by-16 dispatch threshold:
# fr_simd::crc64 (fold-by-4) vs crc64_redis_slice_table, across small sizes, null-gated.
[[bench]]
name = "crc64_threshold"
harness = false

# (frankenredis-knzdi) Same-binary A/B for listpack RDB decode string materialization:
# ListpackEntry::to_bytes (clone) vs into_bytes (move) after decode_listpack.
[[bench]]
name = "listpack_decode_move"
harness = false

# (frankenredis-tgr69/ef928/087qq) Same-binary A/B for i64->decimal render: to_string (fmt+alloc)
# vs write_u64_digits stack scratch (the shipped itoa2 path).
[[bench]]
name = "int_render_itoa2"
harness = false

# (frankenredis zsetlpscore) Same-binary A/B for RDB ZSET_LISTPACK decode: decode_listpack +
# pair-parse (allocates+drops a Vec per string score) vs decode_zset_listpack_pairs (reads each
# score through the alloc-free raw-entry core). Null-gated; WIN on fractional, neutral on integer.
[[bench]]
name = "zset_lp_score_decode"
harness = false

# (frankenredis-g9h0v follow-up) Same-binary A/B for LZF match-tail routing: always-local word loop
# vs routing >= 128 B tails through fr_simd's AVX2 kernel (bit-identical). Byte-identical compressed
# output; WIN on long-run payloads, guard-neutral on short-match/text. Null-gated.
[[bench]]
name = "lzf_prefix_simd"
harness = false

# (RESTORE presize) A/B for decode_value_spans: grow-from-empty vs pre-size from the listpack
# header element count. Byte-identical spans; WIN = elided realloc growth on the RESTORE path.
[[bench]]
name = "value_spans_presize"
harness = false

[[bench]]
name = "aof_manifest_plain_tokens"
harness = false
required-features = ["bench-reference"]

# (frankenredis-79sju) Profile + same-binary instruction proof for eliminating the temporary
# 16-byte Vec allocated for every stream RDB macro-node / pending-entry ID.
[[bench]]
name = "stream_rdb_id_alloc"
harness = false
required-features = ["bench-reference"]

[[bench]]
name = "legacy_hash_ziplist_move"
harness = false
required-features = ["bench-reference"]
