[package]
name = "fr-protocol"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
proptest.workspace = true

# (frankenredis-e4fu8) Same-binary A/B for RESP decimal digit-count on the reply hot path:
# div-by-10 loop vs branchless ilog10 (decimal_u64_len/decimal_usize_len/decimal_i64_len).
[[bench]]
name = "decimal_len_ilog10"
harness = false

[[bench]]
name = "parse_i64_fastpath"
harness = false

# Same-binary A/B for the RESP integer-reply encoder (`:<n>\r\n`): fused single-buffer
# extend_from_slice vs the prior three-extend path, on the universal counter/length reply.
[[bench]]
name = "encode_integer_fastpath"
harness = false
