[package]
name = "fr-protocol"
version = "0.1.0"
edition = "2024"

[features]
bench-reference = []

[dev-dependencies]
proptest.workspace = true

# (frankenredis-e4fu8) Same-binary A/B for RESP decimal digit-count on the reply hot path:
# div-by-10 loop vs branchless ilog10 (decimal_u64_len/decimal_usize_len/decimal_i64_len).
[[bench]]
name = "decimal_len_ilog10"
harness = false

[[bench]]
name = "parse_i64_fastpath"
harness = false

# Same-binary A/B for the RESP integer-reply encoder (`:<n>\r\n`): fused single-buffer
# extend_from_slice vs the prior three-extend path, on the universal counter/length reply.
[[bench]]
name = "encode_integer_fastpath"
harness = false

# Same-binary A/B for the RESP length-header primitive (`<prefix><n>\r\n`): fused single-buffer
# extend_from_slice vs the prior extend(prefix)+push_usize+extend("\r\n") shape, on the
# borrow-encode reply path (bulk-string / aggregate / map headers).
[[bench]]
name = "push_len_header_fastpath"
harness = false

# Same-binary A/B for the fused length headers on a realistic array-of-bulk-strings reply
# (LRANGE/MGET/SMEMBERS shape) WITH bodies present — measures the owned-arm fusion where real
# bodies dilute the per-header saving.
[[bench]]
name = "encode_array_reply_fastpath"
harness = false

# Isolated A/B of the shipped bab278487 encode_bulk_string_slice header fusion vs the pre-change
# three-call header, on a single bulk-string reply (GET/HGET) WITH a body present — verifies
# whether the fused header still wins once a body is in the picture.
[[bench]]
name = "encode_bulk_string_fastpath"
harness = false

# Same-binary A/B for the inbound per-argument bulk-length parse (every command argument): fused
# single-pass scan+accumulate vs the prior read_line + parse_i64_strict two-pass.
[[bench]]
name = "parse_bulk_slice_fastpath"
harness = false

# Same-binary A/B for the inbound multibulk-count parse (once per command): fused single-pass
# scan+accumulate vs the prior read_line + parse_i64_strict two-pass.
[[bench]]
name = "parse_multibulk_count_fastpath"
harness = false

# Same-binary A/B for the owned-frame count/length line parse (parse_bulk / parse_array /
# parse_resp3_map on the connection-read frame path): fused single-pass vs read_line + parse_i64.
[[bench]]
name = "parse_frame_len_line_fastpath"
harness = false

# Same-binary proof for inline SimpleString/Error sanitization: frozen detect-then-byte-push
# reference versus copying the clean runs around embedded CR/LF in bulk.
[[bench]]
name = "inline_sanitize_runs"
harness = false
required-features = ["bench-reference"]

# Same-binary proof for direct RESP3 scalar-leaf encoding: direct scalar arms versus the frozen
# second-dispatch fallback through RespFrame::encode_into, on a CONFIG-like RESP3 map.
[[bench]]
name = "resp3_scalar_dispatch"
harness = false
required-features = ["bench-reference"]
