[package]
name = "fr-repl"
version = "0.1.0"
edition = "2024"

[features]
bench-reference = []

[dependencies]

[[bench]]
name = "psync_reply_canonical"
harness = false
required-features = ["bench-reference"]

[[bench]]
name = "psync_decision_exact_replid"
harness = false
required-features = ["bench-reference"]

[[bench]]
name = "wait_zero_offset"
harness = false
required-features = ["bench-reference"]
