[package]
name = "fr-runtime"
version = "0.1.0"
edition = "2024"

[features]
bench-reference = []

[dependencies]
foldhash = "0.1"
hex.workspace = true
fr-command = { version = "0.1.0", path = "../fr-command" }
fr-config = { version = "0.1.0", path = "../fr-config" }
fr-eventloop = { version = "0.1.0", path = "../fr-eventloop" }
fr-persist = { version = "0.1.0", path = "../fr-persist" }
fr-protocol = { version = "0.1.0", path = "../fr-protocol" }
fr-repl = { version = "0.1.0", path = "../fr-repl" }
fr-store = { version = "0.1.0", path = "../fr-store" }
libc.workspace = true
sha2.workspace = true

[dev-dependencies]
proptest.workspace = true

[[bench]]
name = "replconf_option"
harness = false
required-features = ["bench-reference"]

[[bench]]
name = "replconf_ack_snapshot"
harness = false
required-features = ["bench-reference"]

[[bench]]
name = "pubsub_pending_clients"
harness = false
required-features = ["bench-reference"]
