[package]
name = "fr-runtime"
version = "0.1.0"
edition = "2024"

[features]
bench-reference = []

[dependencies]
foldhash = "0.1"
hex.workspace = true
fr-command = { version = "0.1.0", path = "../fr-command" }
fr-config = { version = "0.1.0", path = "../fr-config" }
fr-eventloop = { version = "0.1.0", path = "../fr-eventloop" }
fr-persist = { version = "0.1.0", path = "../fr-persist" }
fr-protocol = { version = "0.1.0", path = "../fr-protocol" }
fr-repl = { version = "0.1.0", path = "../fr-repl" }
fr-store = { version = "0.1.0", path = "../fr-store" }
libc.workspace = true
sha2.workspace = true

[dev-dependencies]
proptest.workspace = true

[[bench]]
name = "replconf_option"
harness = false
required-features = ["bench-reference"]

[[bench]]
name = "replconf_ack_snapshot"
harness = false
required-features = ["bench-reference"]

[[bench]]
name = "pubsub_pending_clients"
harness = false
required-features = ["bench-reference"]

[[bench]]
name = "client_list_id_lookup"
harness = false
required-features = ["bench-reference"]

[[bench]]
name = "config_get_static_lookup"
harness = false
required-features = ["bench-reference"]

[[bench]]
name = "replica_frame_borrow"
harness = false
required-features = ["bench-reference"]

[[bench]]
name = "set_ok_reply_alloc"
harness = false
required-features = ["bench-reference"]

[[bench]]
name = "set_relexpire_ok_reply_alloc"
harness = false
required-features = ["bench-reference"]

[[bench]]
name = "set_absexpire_ok_reply_alloc"
harness = false
required-features = ["bench-reference"]

[[bench]]
name = "mset_ok_reply_alloc"
harness = false
required-features = ["bench-reference"]

[[bench]]
name = "hmset_ok_reply_alloc"
harness = false
required-features = ["bench-reference"]

[[bench]]
name = "setex_ok_reply_alloc"
harness = false
required-features = ["bench-reference"]

[[bench]]
name = "rename_ok_reply_alloc"
harness = false
required-features = ["bench-reference"]

[[bench]]
name = "set_nx_ok_reply_alloc"
harness = false
required-features = ["bench-reference"]
