[package]
name = "fr-sentinel"
version = "0.1.0"
edition = "2024"

[features]
bench-reference = []

[dependencies]
fr-protocol = { version = "0.1.0", path = "../fr-protocol" }

[dev-dependencies]
proptest.workspace = true

[[bench]]
name = "select_slave"
harness = false
required-features = ["bench-reference"]

[[bench]]
name = "hello_message_parse"
harness = false
required-features = ["bench-reference"]
