[package]
name = "fr-server"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description = "FrankenRedis standalone server binary"

[lib]
name = "fr_server"
path = "src/lib.rs"

[[bin]]
name = "frankenredis"
path = "src/main.rs"

[dependencies]
fr-runtime = { path = "../fr-runtime" }
fr-config = { path = "../fr-config" }
fr-protocol = { path = "../fr-protocol" }
fr-repl = { path = "../fr-repl" }
fr-persist = { path = "../fr-persist" }
fr-command = { path = "../fr-command" }
fr-eventloop = { path = "../fr-eventloop" }
mio.workspace = true
tikv-jemallocator = { workspace = true, optional = true }
mimalloc = { workspace = true, optional = true }

[features]
# mimalloc by default: 63.6% vs 36.5% geomean parity, 70x better p99 tails
default = ["mimalloc"]
jemalloc = ["dep:tikv-jemallocator"]
mimalloc = ["dep:mimalloc"]
# Measurement-only control arm for the one-binary OBJECT IDLETIME floor A/B.
# Production builds do not compile the environment-controlled bypass.
perf-ab-object-idletime-floor = []
