[package]
name = "fr-simd"
version = "0.1.0"
edition = "2024"

[dependencies]

[[bench]]
name = "popcount"
harness = false

[[bench]]
name = "first_mismatch"
harness = false

[[bench]]
name = "bitand"
harness = false

[[bench]]
name = "common_prefix"
harness = false

[[bench]]
name = "crc64"
harness = false

[[bench]]
name = "bitop_swar_vs_avx2"
harness = false
