[package]
name = "fr-store"
version = "0.1.0"
edition = "2024"

[dependencies]
fr-expire = { version = "0.1.0", path = "../fr-expire" }
fr-protocol = { version = "0.1.0", path = "../fr-protocol" }
fr-persist = { version = "0.1.0", path = "../fr-persist" }
fr-sentinel = { version = "0.1.0", path = "../fr-sentinel" }
fr-simd = { version = "0.1.0", path = "../fr-simd" }
indexmap = "2"
foldhash = "0.1"
libc.workspace = true

[features]
bench-reference = []

[dev-dependencies]
proptest.workspace = true
criterion = "0.5"

[[bench]]
name = "store_read"
harness = false

[[bench]]
name = "set_algebra_build"
harness = false

[[bench]]
name = "zadd_encoding_refresh"
harness = false
required-features = ["bench-reference"]

# Same-worker profile and null-gated A/B for the monotonic XADD append path.
[[bench]]
name = "xadd_append"
harness = false
required-features = ["bench-reference"]

[[bench]]
name = "glob_scan"
harness = false

# (cc_fr) Same-binary null-gated A/B for expire_milliseconds re-setting a TTL: two-peek +
# to_vec original vs one-peek + borrowed-logical-key streamlined.
[[bench]]
name = "expire_reset"
harness = false

# (cc_fr) Same-binary null-gated A/B for the per-write side-cache invalidation: unconditional
# remove (hashes key vs empty maps) vs is_empty()-guarded.
[[bench]]
name = "write_cache_invalidation"
harness = false

# (cc_fr) Same-binary null-gated A/B for a no-TTL SET overwrite: always-clone owned key
# (GATE=false) vs clone elided without a TTL (GATE=true).
[[bench]]
name = "set_no_ttl_insert"
harness = false

# (frankenredis-hincrfast) Same-binary null-gated A/B for HINCRBY/HINCRBYFLOAT existing-field
# upsert: insert(field.to_vec()) owned-key alloc vs insert_borrowed in-place value overwrite.
[[bench]]
name = "hincrby_field_clone"
harness = false

# (frankenredis-smovefast) Same-binary null-gated A/B for SMOVE's dst add: sadd(&[member.to_vec()])
# redundant member copy vs sadd(&[member]) borrowed (sadd is generic over AsRef<[u8]>).
[[bench]]
name = "smove_member_clone"
harness = false

# (frankenredis-bfincrfast) Same-binary null-gated A/B for BITFIELD INCRBY: old two-lookup
# get_no_stat+bitfield_set vs fused single-lookup bitfield_incrby.
[[bench]]
name = "bitfield_incrby_fuse"
harness = false
