[package]
name = "fr-store"
version = "0.1.0"
edition = "2024"

[dependencies]
fr-expire = { version = "0.1.0", path = "../fr-expire" }
fr-protocol = { version = "0.1.0", path = "../fr-protocol" }
fr-persist = { version = "0.1.0", path = "../fr-persist" }
fr-sentinel = { version = "0.1.0", path = "../fr-sentinel" }
fr-simd = { version = "0.1.0", path = "../fr-simd" }
indexmap = "2"
foldhash = "0.1"
libc.workspace = true

[features]
bench-reference = []

[dev-dependencies]
proptest.workspace = true
criterion = "0.5"

[[bench]]
name = "store_read"
harness = false

[[bench]]
name = "set_algebra_build"
harness = false

[[bench]]
name = "zadd_encoding_refresh"
harness = false
required-features = ["bench-reference"]

# Same-worker profile and null-gated A/B for the monotonic XADD append path.
[[bench]]
name = "xadd_append"
harness = false
required-features = ["bench-reference"]

[[bench]]
name = "glob_scan"
harness = false
required-features = ["bench-reference"]

# (cc_fr) Same-binary null-gated A/B for expire_milliseconds re-setting a TTL: two-peek +
# to_vec original vs one-peek + borrowed-logical-key streamlined.
[[bench]]
name = "expire_reset"
harness = false

# (cc_fr) Same-binary null-gated A/B for the per-write side-cache invalidation: unconditional
# remove (hashes key vs empty maps) vs is_empty()-guarded.
[[bench]]
name = "write_cache_invalidation"
harness = false

# (cc_fr) Same-binary null-gated A/B for a no-TTL SET overwrite: always-clone owned key
# (GATE=false) vs clone elided without a TTL (GATE=true).
[[bench]]
name = "set_no_ttl_insert"
harness = false

# (cc_fr) Same-binary null-gated A/B for SET ... EX RE-ARMING a live-TTL key: always-clone owned
# key (GATE=false) vs in-place get_mut deadline update eliding the discarded clone (GATE=true).
[[bench]]
name = "set_ex_rearm"
harness = false

# (cc_fr) Instruction-count microbench for PackedZSet::locate's per-record score-decode skip
# (ZSCORE-miss full scan). Measured before/after via git stash + perf stat -e instructions:u.
[[bench]]
name = "packed_zset_locate"
harness = false

# (cc_fr) Same-binary null-gated A/B for GETSET's old value: clone (MOVE=false) vs move-out
# (MOVE=true).
[[bench]]
name = "getset_move"
harness = false

# (frankenredis-hincrfast) Same-binary null-gated A/B for HINCRBY/HINCRBYFLOAT existing-field
# upsert: insert(field.to_vec()) owned-key alloc vs insert_borrowed in-place value overwrite.
[[bench]]
name = "hincrby_field_clone"
harness = false

# (frankenredis-smovefast) Same-binary null-gated A/B for SMOVE's dst add: sadd(&[member.to_vec()])
# redundant member copy vs sadd(&[member]) borrowed (sadd is generic over AsRef<[u8]>).
[[bench]]
name = "smove_member_clone"
harness = false

# (frankenredis-bfincrfast) Same-binary null-gated A/B for BITFIELD INCRBY: old two-lookup
# get_no_stat+bitfield_set vs fused single-lookup bitfield_incrby.
[[bench]]
name = "bitfield_incrby_fuse"
harness = false

# (frankenredis-ek8p9) Profile-first, same-binary median-gated A/B for MOVE's
# heap-string value transfer: deep-copy + delete fallback vs O(1) relink.
[[bench]]
name = "move_key_relink"
harness = false
required-features = ["bench-reference"]

# (frankenredis-lbmk6) Same-binary A/B for the set-listpack DUMP encode: pre-lbmk6
# clone-into-Vec<Vec<u8>> + encode_listpack_strings vs direct-emit encode_set_listpack_dump.
[[bench]]
name = "set_listpack_dump"
harness = false

# (frankenredis-k1wcp) Same-binary A/B for the quicklist2 DUMP-fallback packed-node encode:
# current direct-emit vs buffered roster (the fr-persist-reverted-to path, b89361c13).
[[bench]]
name = "quicklist_dump_fallback"
harness = false

# (frankenredis-bssrh) Same-binary A/B for the listpack-sizing canonical-int probe:
# to_string round-trip (alloc) vs allocation-free listpack_int_bytes_are_canonical predicate.
[[bench]]
name = "listpack_int_probe"
harness = false

# (frankenredis-b1o02) CEILING A/B for a listpack-backed small-HASH repr: current re-pack
# (hash_from_listpack_spans) vs raw listpack.to_vec() keep — bounds the RESTORE-decode win.
[[bench]]
name = "hash_restore_ceiling"
harness = false

# (frankenredis-i229a) Same-binary A/B for the fused BITFIELD write/mixed path: per-op N-lookup
# loop vs one-lookup Store::bitfield_apply_ops.
[[bench]]
name = "bitfield_apply_ops"
harness = false

# (frankenredis-99fwc) Same-binary A/B for the list DUMP payload memoization: re-encode the
# quicklist2 wire payload every DUMP vs cache-hit Vec::clone of an unchanged list.
[[bench]]
name = "list_dump_cache"
harness = false

# (frankenredis-zsetrdbmove) Same-binary A/B for the zset RDB-load member-clone elision:
# borrowed zadd (clones each member into the collapse HashMap) vs owned zadd_plain_owned (moves).
[[bench]]
name = "zset_rdb_load_move"
harness = false

# (frankenredis-listrdbmove) Same-binary A/B for the list RDB-load element-clone elision:
# borrowed rpush (push_back(bytes.to_vec()) clone) vs owned rpush_owned (push_back move).
[[bench]]
name = "list_rdb_load_move"
harness = false

# (frankenredis-hsdumpcache) Same-binary A/B for small HASH/SET DUMP payload memoization:
# listpack re-encode vs cache-hit Vec::clone of an unchanged small hash/set.
[[bench]]
name = "hash_set_dump_cache"
harness = false

# (spop-fusion) Same-binary A/B for SPOP count: the count-x-spop loop (one get_mut per pop) vs the
# fused spop_count (one get_mut + replayed RNG). Byte-identical; measures the eliminated lookups.
[[bench]]
name = "spop_count_fusion"
harness = false

# (bitfield-resolve) Isolated A/B for the eliminated keyspace lookup in BITFIELD's resolve preamble:
# get().is_some()+get_mut() (2 foldhash lookups) vs get_mut() (1).
[[bench]]
name = "bitfield_resolve_lookup"
harness = false

# (keys-notl-guard) Same-binary A/B for keys_in_db's no-TTL guard: unguarded double key-vector
# build + reap loop vs skipping the first build + reap when expires_count == 0.
[[bench]]
name = "keys_notl_guard"
harness = false

# (hset-getmut-first) Same-binary A/B for non-LFU hset_borrowed entry resolution: get_mut-first
# (one probe, existing hash) vs internal_entry (contains_key + get_mut = two).
[[bench]]
name = "hset_getmut_first"
harness = false

# (cc_fr) Same-binary A/B for the post-insert hash encoding refresh: O(1) incremental (count +
# new field/value) vs the O(n) refresh_hash_encoding_flag re-scan of every existing field.
[[bench]]
name = "hset_encoding_refresh"
harness = false

# Same-binary A/B for live variadic HSET/HMSET: payload-bounded incremental encoding refresh vs
# the O(hash width) post-command re-scan.
[[bench]]
name = "hset_many_encoding_refresh"
harness = false

# (cc_fr) Same A/B for HINCRBY: O(1) incremental refresh vs the O(n) rescan on a counter-map hash.
[[bench]]
name = "hincrby_encoding_refresh"
harness = false

# (cc_fr) Same A/B for HSETNX: O(n^2) vs O(n) building a hash one absent field at a time.
[[bench]]
name = "hsetnx_encoding_refresh"
harness = false

# (cc_fr) Same A/B for HINCRBYFLOAT: O(1) incremental refresh vs the O(n) rescan on a counter map.
[[bench]]
name = "hincrbyfloat_encoding_refresh"
harness = false

# (cc_fr) Same A/B for the OWNED hset twin: O(1) incremental refresh vs the O(n) rescan.
[[bench]]
name = "hset_owned_encoding_refresh"
harness = false

# (6lgnu validation) Quantify the lazy rank-treap's per-ZADD maintenance tax: identical N-member
# builds with the treap cold (never queried) vs warm (queried once, maintained on every later ZADD).
[[bench]]
name = "zadd_treap_tax"
harness = false

# (6lgnu validation) NET structural A/B: span-augmented skiplist (order+rank in one) vs BTreeMap
# (order only) insert of identical members. skiplist/btree < treap-tax ⇒ 6lgnu net-wins the write side.
[[bench]]
name = "skiplist_vs_btreemap"
harness = false

# (cc_fr) Same-binary A/B for LPUSH on the Packed repr: push_front(bytes.to_vec()) temp-Vec vs
# push_front_borrowed(bytes) direct copy into the packed buffer. Byte-identical.
[[bench]]
name = "lpush_borrow"
harness = false
